--- a/style.css
+++ b/style.css
@@ -630,32 +630,93 @@
     transform: translate(0, -2px);
   }
   
-  /* Footer styles */
-  footer {
-      width: 100vw;
-      height: 3.5rem;
-      background-color: #0b0081;
-      padding: 20px;
-      color: #fff;
-      text-align: center;
-      bottom: 0;
-      margin-top: auto;
-  }
+  
+
+  /*  Footer Code Starts    */
+
+.footer-basic {
+  padding: 40px 0;
+  background-color: #ffffff;
+  color: #2c2c2c;
+    text-align: center;
+}
+
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-basic ul {
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  
+}
+
+.footer-basic li {
+  padding: 0 10px;
+  display: list-item;
+ text-align: -webkit-match-parent;
+}
+
+.footer-basic ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity: 1;
+}
+
+.footer-basic .social {
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+.footer-basic .social>a {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  margin: 0 8px;
+  color: inherit;
+  opacity: 0.75;
+}
+
+.footer-basic .social>a:hover {
+  opacity: 0.9;
+}
+
+.footer-basic .copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 13px;
+  color: #0080ff;
+  margin-bottom: 0;
+}
+
+.list-inline {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  
+}
+.list-inline-item {
+  margin-right: 15px;      /* Adjust the spacing as needed */
+}
+
+  /*   Footer Code Ends    */
     
-    .footer ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    
-    .footer li {
-      display: inline;
-      margin-right: 10px;
-    }
-    
-    .footer a {
-      color: #fff;
-      text-decoration: none;
-    }
     
     /* Media queries for responsiveness */
     @media screen and (max-width: 768px) {
@@ -703,20 +764,7 @@
         align-items: flex-start;
         margin-top: 15px;
       }
-      /* Footer styles */
-      .footer {
-          padding: 10px;
-      }
-  
-      .footer ul {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: center;
-      }
-  
-      .footer li {
-          margin-right: 10px;
-          margin-bottom: 10px;
-      }
+
+    
     }
     
