--- a/style.css
+++ b/style.css
@@ -533,6 +533,7 @@
     color: white;
     flex-direction: row;
     box-sizing: border-box;
+    margin-bottom: 100%;
     /* border: 2px solid yellow; */
   }
   .head-text {
