--- a/style.css
+++ b/style.css
@@ -639,6 +639,12 @@ footer {
     color: white;
     text-align: center;
 }
+
+#social-icon{
+    height: auto;
+    max-width: 80px;
+  }
+
 .footer ul {
     list-style: none;
     display: flex;
