--- a/style.css
+++ b/style.css
@@ -108,6 +108,14 @@
     text-decoration: none;
     border: 1px solid #fff;
     border-radius: 2px;
+    transition: all .3s;
+  }
+
+  .btn-head:hover{
+    background-color: #f9d133ea;
+    color: #0B0081;
+    /* border: 2px solid rgb(30, 29, 29); */
+    border-radius: 2px;
   }
   
   /* Mobile Responsive Styles */
@@ -194,11 +202,12 @@
   }
   
   .under-welcome-btn{
-      background-color: orangered;
+      background-color: #F9D333;
       padding: 14px;
       padding-left: 18px;
       padding-right: 18px;
-      color: white;
+      color: #0B0081;
+      border: 2px solid rgb(30, 29, 29);
       /* border-rad     ius: 12px; */
       border-radius: 0.375rem;
       font-weight: bold;
@@ -209,8 +218,9 @@
   }
   
   .under-welcome-btn:hover{
-    background-color: rgb(255, 0, 0);
-      color: #0b0081;
+      background-color: transparent;
+      border: 2px solid white;
+      color: white;
       transition: 0.5s;
       cursor: pointer;
   }
@@ -564,7 +574,7 @@
     margin-left: 20px;
   }
   .text-lightBlue{
-    color: orangered;
+    color: #f6c70a;
   }
   
   .working-head{
@@ -610,23 +620,24 @@
   }
   .sign-up-button-btn {
     margin-top: 1rem;
-    background-color: orangered;
+    background-color: #F9D333;
     width: fit-content;
-    color: white;
+    color: #0B0081;
     padding: 14px 18px;
     border-radius: 0.375rem;
     font-weight: bold;
-    background-color: orangered;
     transition: all;
     float: left;
     cursor: pointer;
     /* transition-duration: 200ms; */
-    /* transition: all 200ms ease-in-out; */
+    transition: all ease-in-out 0.3s;
   }
   
   .sign-up-button-btn:hover {
     /* background-color: #f44336; */
-    background-color: rgb(255, 0, 0);
+    background-color: transparent;
+    color: white;
+    border: 2px solid white;
     transform: translate(0, -2px);
   }
   
