--- a/sign-up.css
+++ b/sign-up.css
@@ -5,7 +5,9 @@
     height: 80vh;
     margin-top: 86px;
   }
-  
+ 
+
+
 form {
     max-width: 350px;
     width: 100%;
@@ -18,12 +20,14 @@ form {
     max-width: 300px;
     /* margin: 0 auto; */
     padding: 20px;
-    background-color: #f2f2f2;
+    /* background-color: #f2f2f2; */
+     background: rgba(255, 255, 255, 0.1);
     border-radius: 4px;
   }
   
   .signup-form h2 {
     text-align: center;
+    color:#fff;
   }
   
   .form-group {
@@ -38,6 +42,7 @@ form {
     display: block;
     font-weight: bold;
     margin-bottom: 5px;
+    color: #ffff;
   }
   
   input[type="text"],input[type="email"], input[type="tel"],
@@ -46,19 +51,16 @@ form {
     padding: 10px;
     border-radius: 4px;
     border: 1px solid #ccc;
+    outline: none;
   }
   
   button {
     width: 100%;
     padding: 10px;
-    background-color: #f44336;
+    background-color: rgba(255, 255, 255, 0.1);
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
   }
-  
-  button:hover {
-    background-color: rgb(255, 0, 0);
-  }
-  
+ 
