--- a/style.css
+++ b/style.css
@@ -353,7 +353,8 @@ img {
 .transaction-form button {
   padding: 5px 10px;
   font-size: 16px;
-  border-radius: 30px;
+  border-radius: 10px;
+  margin-left: 8px;
   height: 39px;
   border: 1px solid #18ad1d;
   background-color: #18ad1d;
@@ -473,7 +474,7 @@ td:last-child {
 }
 
 .save-button {
-  background-color: #02a305;
+  background-color: #2cb530;
   color: #fff;
   border: none;
   padding: 5px 10px;
