--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body {
   scroll-behavior: smooth;
-  background-color: #00b4d8;
+  background-color: #0b0081;
 }
 
 nav {
@@ -21,7 +21,7 @@ nav {
   left: 0;
   width: 100%;
   /* background-color: transparent; */
-  background-color: #00b4d8;
+  background-color: #0b0081;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -143,7 +143,7 @@ nav {
 
 .section-box {
   position: relative;
-  background-color: #00b4d8;
+  background-color: #0b0081;
 }
 
 /* Landing Page Styles */
@@ -212,7 +212,7 @@ nav {
 
 .under-welcome-btn:hover {
   background-color: rgb(255, 0, 0);
-  color: #caf0f8;
+  color: #0b0081;
   transition: 0.5s;
   cursor: pointer;
 }
@@ -303,7 +303,6 @@ img {
   padding: 0px;
   box-sizing: border-box;
   overflow-y: auto; /* Enable vertical scrollbar */
-  background-color: #ffc2d1;
 }
 
 .tracker-h1 {
@@ -442,7 +441,7 @@ th {
 td {
   padding: 10px;
   text-align: left;
-  color: #caf0f8;
+  color: #0b0081;
   min-width: none;
   font-weight: lighter;
   border-top: 1px solid #ddd;
@@ -542,7 +541,6 @@ td:last-child {
 }
 
 .working-content {
-  background-color: #ffd6a5;
   display: flex;
   max-width: 1100px;
   justify-content: space-between;
@@ -636,7 +634,7 @@ td:last-child {
 footer {
   width: 100vw;
   height: 3.5rem;
-  background-color: #ffb4a2;
+  background-color: #0b0081;
   padding: 20px;
   color: #fff;
   text-align: center;
