--- a/style.css
+++ b/style.css
@@ -361,15 +361,21 @@ img {
 .transaction-form button {
   padding: 5px 10px;
   font-size: 16px;
-  border-radius: 30px;
+  margin-left: 1rem;
+  border-radius: 10px;
   height: 39px;
   border: 1px solid #18ad1d;
   background-color: #18ad1d;
   color: #fff;
-  /* border: none; */
+  /*border: none;
+  */
   cursor: pointer;
 }
 
+.transaction-form button:hover {
+  background-color: #0b0081;
+  border: 2px solid #18ad1d;
+}
 .currency-filter {
   padding: 5px 10px;
   display: flex;
